[package]
name = "pol_indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["ws"] }
tokio-stream = "0.1"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
dotenv = "0.15"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

